Move directories to repos

--- a/recipes/chicken-pot-pie.html
+++ b/recipes/chicken-pot-pie.html
@@ -5,6 +5,65 @@
         <title>Fabulous Chicken Pot Pie</title>
     </head>
     <body>
-        <h1>Fabulous Chicken Pot Pie</h1>
+        <div>
+            <h1><img src="../images/chicken-pot-pie.jpg" alt="chicken pot pie in a pie pan"/></h1>
+        </div>
+        <div>    
+            <h2>Fabulous Chicken Pot Pie</h2>
+        </div>    
+        <div>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Sit amet venenatis urna cursus eget nunc. Amet mattis vulputate enim nulla. Mus mauris vitae ultricies leo integer. Risus nullam eget felis eget nunc lobortis mattis aliquam faucibus. Sit amet justo donec enim diam. Sed risus pretium quam vulputate dignissim suspendisse in. Id semper risus in hendrerit. Adipiscing vitae proin sagittis nisl rhoncus. At risus viverra adipiscing at. Consectetur adipiscing elit ut aliquam purus sit amet luctus venenatis. Congue eu consequat ac felis donec et odio pellentesque diam.</p>        
+        </div>
+        <div>
+            <ul>
+                <li>Chicken</li>
+                <li>Gravy</li>
+                <li>Flour</li>
+                <li>Butter Milk</li>
+                <li>eggs</li>
+                <li>Mixed Vegetables</li>
+                <li>onions</li>
+                <li>celery</li>
+                <li>Chicken Stock</li>
+            </ul>
+            <ol>
+                <li>Prepare the crust dough
+                    <ol>
+                        <li>Set up dough mixer or food processor and equip it with dough mixer</li>
+                        <li>Measure out 2.5 cups of flour and add to the food processor</li>
+                        <li>add two sticks of Butter</li>
+                        <li>Add 10 oz buttermilk</li>
+                        <li>Add 1 tbsp of salt</li>
+                        <li>Add 1 tbsp of baking soda</li>
+                        <li>Add 2 tbsp of honey</li>
+                        <li>Mix on low until all ingredients are incorporated</li>
+                        <li>Add 2 eggs and mix on low speed until all ingredients are incorporated</li>
+                        <li>Set aside the dough in a plastic bag and refrigerate</li>
+                    </ol>
+                </li>
+                <li>Create Pie Filling
+                    <ol>
+                        <li>On the stove warm up a medium sized pot on medium low </li>
+                        <li>Fill the pot with the frozen mixed vegatables</li>
+                        <li>Allow vegetables to thaw in the pot</li>
+                        <li>Add 1 tbs crushed black pepper</li>
+                        <li>Add 1 tsp himalayan pink salt</li>
+                        <li>Once thawed remove from heat</li>
+                    </ol>
+                </li>
+                <li>The Chicken
+                    <ol>
+                        <li>Add small pot to the stove on medium heat</li>
+                        <li>Add cans of chicken</li>
+                        <li>Add <small>1/2</small>cup chicken stock</li>
+                        <li>simmer over medium heat for 7 minutes or until stock has reduced by half</li>
+
+                    </ol>
+                </li>
+                <li>Add everything to a pan</li>
+                <li>Bake on 375 degrees for 60 minutes or until crust is flakey and golden brown</li>
+            </ol>
+        </div>
+        
     </body>
 </html>
