--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -5,6 +5,55 @@
         <title>Lasagna with Meat Sauce</title>
     </head>
     <body>
-        <h1>Lasagna with Meat Sauce</h1>
+        <div>
+            <h1><img src="../images/download.jpeg" alt="A plate of lasagna with meat sauce"/></h1>
+        </div>  
+        <div>
+            <h2>Lasagna with Meat Sauce</h2>
+        </div>
+        <div>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Sit amet venenatis urna cursus eget nunc. Amet mattis vulputate enim nulla. Mus mauris vitae ultricies leo integer. Risus nullam eget felis eget nunc lobortis mattis aliquam faucibus. Sit amet justo donec enim diam. Sed risus pretium quam vulputate dignissim suspendisse in. Id semper risus in hendrerit. Adipiscing vitae proin sagittis nisl rhoncus. At risus viverra adipiscing at. Consectetur adipiscing elit ut aliquam purus sit amet luctus venenatis. Congue eu consequat ac felis donec et odio pellentesque diam.</p>
+        </div>
+        <div>
+            <ul>
+                <li>ground italian sausage</li>
+                <li>ground beef</li>
+                <li>eggs</li>
+                <li>flour</li>
+                <li>Pamesian Cheese</li>
+                <li>Italian Spices</li>
+                <li>Tomato Paste</li>
+                <li>Ripe Roma Tomatoes</li>
+            </ul>
+        </div>
+        <div>
+            <ol>
+                <li>Brown Italian sausage & ground beef. 
+                    <ol>
+                        <li>Set 12 inch skillet onto stove</li>
+                        <li>Set temperature to medium high</li>
+                        <li>while still cool add 3tbs of olive oil to the skillet</li>
+                        <li>When oil begins to smoke, add both ground sausage and beef to the pan</li>
+                        <li>Cook on medium high for 7 minutes stirring occassionally then reduce to medium heat</li>
+                        <li>Cook another 15 minutes stirring occassionally until meat is thoroughly brown</li>
+                    </ol>
+                </li>
+                <li>
+                    <ol>
+                        <li>Set Large cutting board onto the counter</li>
+                        <li>Add 3 cups fine milled flour into a mound</li>
+                        <li>Hollow out the center of the mound</li>
+                        <li>In the hollowed out center add 3 shelled eggs</li>
+                        <li>Mix with hands until eggs and flour are fully incorporate</li>
+                        <li>roll into a dough ball and set aside</li>
+                    </ol>
+                </li>
+                <li>Cut chilled dough into sheets for pasta</li>
+                <li>Add everything to a pan and cook</li>
+                <li>Preheat oven to 375 degrees</li>
+                <li>Bake Lasagna for 75 minutes or until cheese is bubbling and brown</li>
+                <li>Use thermometer to check that internal temperature is at least 165 degrees</li>
+            </ol>
+        </div>
     </body>
 </html>
