--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
             <ul>
                 <li><a href="./recipes/lasagna.html">Lasagna</a></li>
                 <li><a href="./recipes/chicken-pot-pie.html">Chicken Pot Pie</a></li>
+                <li><a href="./recipes/hamburgers.html">Hamburgers</a></li>
+                </li>
             </ul>
         </div>
     </body>
